# DXVK-Sarek-Mali

./: README.md  meson.build
.github/workflows/: mali_build.yml
src/dxvk/: dxvk_device.cpp  dxvk_instance.cpp
